tests/ui/diagnostic_namespace/on_const/misplaced_attr.stderr
error: `#[diagnostic::on_const]` can only be applied to non-const trait implementations
  --> $DIR/misplaced_attr.rs:8:1
   |
LL | #[diagnostic::on_const(message = "tadaa", note = "boing")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | const impl PartialEq for Foo {
   | ---------------------------- this is a const trait implementation
   |
note: the lint level is defined here
  --> $DIR/misplaced_attr.rs:2:9
   |
LL | #![deny(misplaced_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `diagnostic::on_const` attribute cannot be used on structs
  --> $DIR/misplaced_attr.rs:4:3
   |
LL | #[diagnostic::on_const(message = "tadaa", note = "boing")]
   |   ^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `diagnostic::on_const` attribute can only be applied to trait impl blocks

error: the `diagnostic::on_const` attribute cannot be used on inherent impl blocks
  --> $DIR/misplaced_attr.rs:16:3
   |
LL | #[diagnostic::on_const(message = "tadaa", note = "boing")]
   |   ^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `diagnostic::on_const` attribute can only be applied to trait impl blocks

error: the `diagnostic::on_const` attribute cannot be used on trait methods in impl blocks
  --> $DIR/misplaced_attr.rs:25:7
   |
LL |     #[diagnostic::on_const(message = "tadaa", note = "boing")]
   |       ^^^^^^^^^^^^^^^^^^^^
   |
   = help: the `diagnostic::on_const` attribute can only be applied to trait impl blocks

error: aborting due to 4 previous errors

